--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@wix/dashboard": "^1.3.36",
-    "@wix/design-system": "^1.0.0",
-    "@wix/wix-ui-icons-common": "^3.0.0"
+    "@wix/dashboard": "^1.3.39",
+    "@wix/design-system": "^1.204.1",
+    "@wix/forms": "^1.0.259",
+    "@wix/wix-ui-icons-common": "^3.77.1"
   },
   "devDependencies": {
     "@types/react": "^16.0.0",
