--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@wix/dashboard": "^1.3.39",
     "@wix/design-system": "^1.204.1",
     "@wix/forms": "^1.0.259",
-    "@wix/wix-ui-icons-common": "^3.77.1"
+    "@wix/wix-ui-icons-common": "^3.77.1",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^16.0.0",
