--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@wix/dashboard": "^1.3.39",
+    "@wix/data": "^1.0.259",
     "@wix/design-system": "^1.204.1",
     "@wix/forms": "^1.0.259",
+    "@wix/sdk": "^1.15.24",
     "@wix/wix-ui-icons-common": "^3.77.1",
     "recharts": "^3.1.0"
   },
