--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@wix/dashboard": "^1.3.39",
     "@wix/data": "^1.0.259",
     "@wix/design-system": "^1.204.1",
+    "@wix/essentials": "^0.1.24",
     "@wix/forms": "^1.0.259",
     "@wix/sdk": "^1.15.24",
     "@wix/web-methods": "^1.0.6",
